--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,15 @@
-
+<h1>Make your form here</h1>
+<form action="/teams" method="post">
+  Team Name: <input type="text" name="team[name]">
+  Team Motto: <input type="text" name="team[motto]">
+  Member 1 Name: <input id="member1_name" type="text" name="team[members][][name]">
+  Member 1 Power: <input id="member1_power" type="text" name="team[members][][power]">
+  Member 1 Bio: <input id="member1_bio" type="text" name="team[members][][bio]">
+  Member 2 Name: <input id="member2_name" type="text" name="team[members][][name]">
+  Member 2 Power: <input id="member2_power" type="text" name="team[members][][power]">
+  Member 2 Bio: <input id="member2_bio" type="text" name="team[members][][bio]">
+  Member 3 Name: <input id="member3_name" type="text" name="team[members][][name]">
+  Member 3 Power: <input id="member3_power" type="text" name="team[members][][power]">
+  Member 3 Bio: <input id="member3_bio" type="text" name="team[members][][bio]">
+  <input type="submit" value="Submit">
+</form>
