--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,4 +1,4 @@
-<h1>Make your form here</h1>
+<h1>Create a Team and Heroes!</h1>
 <form action="/teams" method="post">
   Team Name: <input type="text" name="team[name]">
   Team Motto: <input type="text" name="team[motto]">
