Automatically backed up by Learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -11,5 +11,5 @@
   Member 3 Name: <input id="member3_name" type="text" name="team[members][][name]">
   Member 3 Power: <input id="member3_power" type="text" name="team[members][][power]">
   Member 3 Bio: <input id="member3_bio" type="text" name="team[members][][bio]">
-  <input type="submit" value="Submit">
+  <input id="submit" type="submit" value="Submit">
 </form>
