Automatically backed up by Learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,4 +1,8 @@
 <h3>Name: <%= @team.name %></h3><br>
 <h4>Motto: <%= @team.motto %></h4>
 
-<p>Hero Power: <%= @members.power %></p><br>
+<% @members.each do |member| %>
+    <p>Hero: <%= member.name %></p><br>
+    <p>Hero Power: <%= member.power %></p><br>
+    <p>Hero Bio: <%= member.bio %></p><br>
+<% end %>
