Automatically backed up by Learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,6 +1,6 @@
 <h3>Name: <%= @team.name %></h3><br>
 <h4>Motto: <%= @team.motto %></h4>
 
-    <p>Hero: <%= @member.1.name %></p><br>
-    <p>Hero Power: <%= member.power %></p><br>
+    <p>Hero: <%= @members.1.name %></p><br>
+    <p>Hero Power: <%= @members.1.power %></p><br>
     <p>Hero Bio: <%= member.bio %></p><br>
