Automatically backed up by Learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -2,5 +2,5 @@
 <h4>Motto: <%= @team.motto %></h4>
 
     <p>Hero: <%= @members.1.name %></p><br>
-    <p>Hero Power: <%= @members.1.power %></p><br>
+    <p>Hero Power: <%= @members.power %></p><br>
     <p>Hero Bio: <%= member.bio %></p><br>
