--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,4 +1,4 @@
 <h3>Name: <%= @team.name %></h3><br>
 <h4>Motto: <%= @team.motto %></h4>
 
-    <p>Hero: <%= params["team"]["members"] %></p><br>
+    <p>Hero: <%= params["team"] %></p><br>
