--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,4 +1,13 @@
-<h3>Name: <%= @team.name %></h3><br>
-<h4>Motto: <%= @team.motto %></h4>
+<div class="team">
+  <h3>Name: <%= @team.name %></h3><br>
+  <h4>Team Motto: <%= @team.motto %></h4>
+</div><br>
 
-    <p>Hero: <%= params["team"] %></p><br>
+<h1>Superheros</h1>
+<% @members.each do |member| %>
+  <div class="superhero">
+    <p>Hero: <%= member.name %></p><br>
+    <p>Hero Power: <%= member.power %></p><br>
+    <p>Hero Bio: <%= member.bio %></p><br>
+  </div><br>
+<% end %>
