Automatically backed up by Learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -6,7 +6,7 @@
 <h1>Superheros</h1>
 <% @members.each do |member| %>
   <div class="superhero">
-    <p>Hero name: <%= member.name %></p><br>
+    <p>Hero Name: <%= member.name %></p><br>
     <p>Hero Power: <%= member.power %></p><br>
     <p>Hero Bio: <%= member.bio %></p><br>
   </div><br>
