--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -8,6 +8,6 @@
   <div class="superhero">
     <p>Hero Name: <%= member.name %></p><br>
     <p>Hero Power: <%= member.power %></p><br>
-    <p>Hero Bio: <%= member.bio %></p><br>
+    <p>Hero Biography: <%= member.bio %></p><br>
   </div><br>
 <% end %>
