--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,13 @@
+<div class="team">
+  <h3>Name: <%= @team.name %></h3><br>
+  <h4>Team Motto: <%= @team.motto %></h4>
+</div><br>
 
-
-
+<h1>Superheros</h1>
+<% @members.each do |member| %>
+  <div class="superhero">
+    <p>Hero Name: <%= member.name %></p><br>
+    <p>Hero Power: <%= member.power %></p><br>
+    <p>Hero Biography: <%= member.bio %></p><br>
+  </div><br>
+<% end %>
